Update .env file to include AUTH_SECRET and ensure STACK_SECRET_SERVER_KEY has a newline at the end for proper formatting.

--- a/.env
+++ b/.env
@@ -25,3 +25,5 @@ POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_tnoZ7JMsc1yk@ep-small-wildflower
 NEXT_PUBLIC_STACK_PROJECT_ID=46251757-bf81-45ea-905f-a3d25f7e23d7
 NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=pck_dqb58apcxs2pfqyysj6w6vc8q8f1c0khtzv17szpn0gtr
 STACK_SECRET_SERVER_KEY=ssk_4nb3dgagydqzzg38wy15q1gyh85fn2ystj4bfrrct723g
+
+AUTH_SECRET=nRQ25EIYdo7ggg8MCM+XPz9PR+AL0Cx8LucSU+JvQYA=
